  New kind of type expression, for packaged modules: (module PT).
  New kind of expression, to pack a module as a first-class value: (module MODEXPR : PT).
  New kind of module expression, to unpack a first-class value as a module: (val EXPR : PT).
  PT is a package type of the form "S" or
  "S with type t1 = ... and ... and type tn = ..." (S refers to a module type).

Compilers and toplevel:
- New warning (activated by the warning code 'R') to signal
  record patterns without "; _" where some labels of the record type
  are not listed in the pattern.
- Better error report in case of unbound qualified identifier: if the module
  is unbound this error is reported in the first place.
- Added option '-no-app-funct' to turn applicative functors off.
  This option can help working around mysterious type incompatibilities
  caused by the incomplete comparison of applicative paths F(X).t.

Standard library:
- Format: new function ikfprintf analoguous to ifprintf with a continuation
  argument.
- PR#4210, #4245: stricter range checking in string->integer conversion
  functions (int_of_string, Int32.of_string, Int64.of_string,
  Nativeint.of_string).  The decimal string corresponding to
  max_int + 1 is no longer accepted.
- Format: to prevent confusion when mixing Format printing functions and
  direct low level output, values Format.stdout and Format.stderr have been
  added.
- Scanf: to prevent confusion when mixing Scanf scanning functions and direct
  low level input, value Scanf.stdin has been added.

Bug Fixes:
- PR#4775: compiler crash on crazy types (temporary fix)


Objective Caml 3.11.1:
----------------------

Bug fixes:
- PR#4095: ocamldebug: strange behaviour of control-C
- PR#4403: ocamldebug: improved handling of packed modules
- PR#4650: Str.regexp_case_fold mis-handling complemented character sets [^a]
- PR#4660: Scanf.format_from_string: handling of double quote
- PR#4666: Unix.exec* failure in multithread programs under MacOS X and FreeBSD