@@ -117,6 +117,7 @@ and expression_desc =
   | Pexp_object of class_structure
   | Pexp_newtype of string * expression
   | Pexp_pack of module_expr * package_type
+  | Pexp_open of Longident.t * expression
 
 (* Value descriptions *)
 
